# giraffe-desktop-app-tauri

./: auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  unocss.config.ts  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json  tauri.liunx.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/@types/: report.d.ts
src/apis/: ajax.ts
src/apis/modules/: report.ts
src/components/: CallbackView.vue  Slidebar.vue
src/composables/: tauri_invoke.ts  utils.ts
src/pages/: [callback].vue  index.vue  splashscreen.vue
src/pages/ru/: README.md
src/pages/ru/writing/: README.md  index.vue
src/pages/things/: Anytime.vue  InBox.vue  Index.vue  LogBook.vue  SomeDay.vue  Today.vue  UpComming.vue
src/pages/things/components/: MainBoard.vue  TagSelect.vue
src/pages/things/stores/: index.ts  menus.ts  type.ts
