[package]
name = "giraffe-desktop-app-vite"
version = "0.1.0"
description = "A Tauri App"
authors = [ "ayac3j@gmail.com" ]
license = ""
repository = ""
default-run = "giraffe-desktop-app-vite"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.4", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
